--- a/swin_transformers_training_medmnist.ipynb
+++ b/swin_transformers_training_medmnist.ipynb
@@ -7,11 +7,7 @@
       },
       "source": [
         "# Image classification with Swin Transformers\n",
-        "\n",
-        "**Author:** [Rishit Dagli](https://twitter.com/rishit_dagli)<br>\n",
-        "**Date created:** 2021/09/08<br>\n",
-        "**Last modified:** 2021/09/08<br>\n",
-        "**Description:** Image classification using Swin Transformers, a general-purpose backbone for computer vision."
+        "\n"
       ]
     },
     {
@@ -23,7 +19,7 @@
         "This example implements\n",
         "[Swin Transformer: Hierarchical Vision Transformer using Shifted Windows](https://arxiv.org/abs/2103.14030)\n",
         "by Liu et al. for image classification, and demonstrates it on the\n",
-        "[CIFAR-100 dataset](https://www.cs.toronto.edu/~kriz/cifar.html).\n",
+        "[MedMNIST dataset].\n",
         "\n",
         "Swin Transformer (**S**hifted **Win**dow Transformer) can serve as a\n",
         "general-purpose backbone for computer vision. Swin Transformer is a hierarchical\n",
@@ -177,7 +173,7 @@
       "source": [
         "## Prepare the data\n",
         "\n",
-        "We load the CIFAR-100 dataset through `keras.datasets`,\n",
+        "We load the MedMNIST dataset through `keras.datasets`,\n",
         "normalize the images, and convert the integer labels to one-hot encoded vectors."
       ]
     },
@@ -6265,9 +6261,9 @@
         "id": "xsVe32WI0dvJ"
       },
       "source": [
-        "### Train on CIFAR-100\n",
+        "### Train on MedMNIST\n",
         "\n",
-        "We train the model on CIFAR-100. Here, we only train the model\n",
+        "We train the model on MedMNIST. Here, we only train the model\n",
         "for 40 epochs to keep the training time short in this example.\n",
         "In practice, you should train for 150 epochs to reach convergence."
       ]
@@ -6472,37 +6468,7 @@
         "print(f\"Test top 5 accuracy: {round(top_5_accuracy * 100, 2)}%\")"
       ]
     },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OSGBzDd_0dva"
-      },
-      "source": [
-        "The Swin Transformer model we just trained has just 152K parameters, and it gets\n",
-        "us to ~75% test top-5 accuracy within just 40 epochs without any signs of\n",
-        "overfitting as well as seen in above graph. This means we can train this network\n",
-        "for longer (perhaps with a bit more regularization) and obtain even better\n",
-        "performance. This performance can further be improved by additional techniques\n",
-        "like cosine decay learning rate schedule, other data augmentation techniques.\n",
-        "While experimenting, I tried training the model for 150 epochs with a slightly\n",
-        "higher dropout and greater embedding dimensions which pushes the performance to\n",
-        "~72% test accuracy on CIFAR-100 as you can see in the screenshot.\n",
-        "\n",
-        "![Results of training for longer](https://i.imgur.com/9vnQesZ.png)\n",
-        "\n",
-        "The authors present a top-1 accuracy of 87.3% on ImageNet. The authors also\n",
-        "present a number of experiments to study how input sizes, optimizers etc. affect\n",
-        "the final performance of this model. The authors further present using this\n",
-        "model for object detection, semantic segmentation and instance segmentation as\n",
-        "well and report competitive results for these. You are strongly advised to also\n",
-        "check out the [original paper](https://arxiv.org/abs/2103.14030).\n",
-        "\n",
-        "This example takes inspiration from the official\n",
-        "[PyTorch](https://github.com/microsoft/Swin-Transformer) and\n",
-        "[TensorFlow](https://github.com/VcampSoldiers/Swin-Transformer-Tensorflow)\n",
-        "implementations."
-      ]
-    },
+    
     {
       "cell_type": "code",
       "source": [],
