--- a/swin_transformers_training_medmnist.ipynb
+++ b/swin_transformers_training_medmnist.ipynb
@@ -173,7 +173,7 @@
       "source": [
         "## Prepare the data\n",
         "\n",
-        "We load the MedMNIST dataset through `keras.datasets`,\n",
+        "We load the MedMNIST dataset,\n",
         "normalize the images, and convert the integer labels to one-hot encoded vectors."
       ]
     },
